# minimal-stats

./: CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  main.yaml
src/distributions/: Binomialdistribution.py  Gaussiandistribution.py  Generaldistribution.py  __init__.py
tests/: test_binomial.py  test_gaussian.py
