[metadata]
name = minimal-stats
version = 0.0.1
author = ASHISH LAMSAL
author_email = ashishlamsal.me@gmail.com
description = A small package for statistical distributions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ashishlamsal/minimal-stats.git
project_urls =
    Bug Tracker = https://github.com/ashishlamsal/minimal-stats/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib

[options.packages.find]
where = src