[metadata]
name = minimal-stats
version = 1.0.0
author = ASHISH LAMSAL
author_email = ashishlamsal.me@gmail.com
description = A small package for statistical distributions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ashishlamsal/minimal-stats.git
project_urls =
    Bug Tracker = https://github.com/ashishlamsal/minimal-stats/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib

[options.packages.find]
where = src

[flake8]
exclude = .git,*migrations*,*venv*
max-line-length = 119